# AdventOfCode

./: .envrc  .gitignore  .vimrc  README.md  aoc.lua  cabal.project  default.nix  shell.nix  thisyear
2020/: AoC.hs  AoC2020.cabal
2020/Day 10: Adapter Array/: AdapterArray.hs  README.md
2020/Day 11: Seating System/: README.md  SeatingSystem.hs
2020/Day 12: Rain Risk/: README.md  RainRisk.hs
2020/Day 13: Shuttle Search/: README.md  ShuttleSearch.hs
2020/Day 14: Docking Data/: DockingData.hs  README.md
2020/Day 15: Rambunctious Recitation/: README.md  RambunctiousRecitation.hs
2020/Day 16: Ticket Translation/: README.md  TicketTranslation.hs
2020/Day 17: Conway Cubes/: ConwayCubes.hs  README.md
2020/Day 18: Operation Order/: OperationOrder.hs  README.md
2020/Day 19: Monster Messages/: MonsterMessages.hs  README.md
2020/Day 1: Report Repair/: README.md  ReportRepair.hs
2020/Day 20: Jurassic Jigsaw/: JurassicJigsaw.hs  README.md
2020/Day 21: Allergen Assessment/: AllergenAssessment.hs  README.md
2020/Day 22: Crab Combat/: CrabCombat.hs  README.md
2020/Day 23: Crab Cups/: CrabCups.hs  README.md
2020/Day 24: Lobby Layout/: LobbyLayout.hs  README.md
2020/Day 25: Combo Breaker/: Check On Your Deposit.md  ComboBreaker.hs  README.md
2020/Day 2: Password Philosophy/: PasswordPhilosophy.hs  README.md
2020/Day 3: Toboggan Trajectory/: README.md  TobogganTrajectory.hs
2020/Day 4: Passport Processing/: PassportProcessing.hs  README.md
2020/Day 5: Binary Boarding/: BinaryBoarding.hs  README.md
2020/Day 6: Custom Customs/: CustomCustoms.hs  README.md
2020/Day 7: Handy Haversacks/: HandyHaversacks.hs  README.md
2020/Day 8: Handheld Halting/: HandheldHalting.hs  README.md
2020/Day 9: Encoding Error/: EncodingError.hs  README.md
2021/: AoC.hs  AoC2021.cabal
2021/Day 01: Sonar Sweep/: README.md  SonarSweep.hs
2021/Day 02: Dive!/: Dive.hs  README.md
2021/Day 03: Binary Diagnostic/: BinaryDiagnostic.hs  README.md
2021/Day 04: Giant Squid/: GiantSquid.hs  README.md
2021/Day 05: Hydrothermal Venture/: HydrothermalVenture.hs  README.md
2021/Day 06: Lanternfish/: Lanternfish.hs  README.md
2021/Day 07: The Treachery of Whales/: README.md  TheTreacheryOfWhales.hs
2021/Day 08: Seven Segment Search/: README.md  SevenSegmentSearch.hs
2021/Day 09: Smoke Basin/: README.md  SmokeBasin.hs
2021/Day 10: Syntax Scoring/: README.md  SyntaxScoring.hs
2021/Day 11: Dumbo Octopus/: DumboOctopus.hs  README.md
2021/Day 12: Passage Pathing/: PassagePathing.hs  README.md
2021/Day 13: Transparent Origami/: README.md  TransparentOrigami.hs
2021/Day 14: Extended Polymerization/: ExtendedPolymerization.hs  README.md
2021/Day 15: Chiton/: Chiton.hs  README.md
2021/Day 16: Packet Decoder/: PacketDecoder.hs  README.md
2021/Day 17: Trick Shot/: README.md  TrickShot.hs
2021/Day 18: Snailfish/: README.md  Snailfish.hs
2021/Day 19: Beacon Scanner/: BeaconScanner.hs  README.md
2021/Day 20: Trench Map/: README.md  TrenchMap.hs
2021/Day 21: Dirac Dice/: DiracDice.hs  README.md
2021/Day 22: Reactor Reboot/: README.md  ReactorReboot.hs
2021/Day 23: Amphipod/: Amphipod.hs  README.md
2021/Day 24: Arithmetic Logic Unit/: ArithmeticLogicUnit.hs  README.md
2021/Day 25: Sea Cucumber/: Conclusion.md  README.md  SeaCucumber.hs
2022/: AoC.hs  AoC2022.cabal  LICENSE
2022/Day 01: Calorie Counting/: CalorieCounting.hs  README.md
2022/Day 02: Rock Paper Scissors/: README.md  RockPaperScissors.hs
2022/Day 03: Rucksack Reorganization/: README.md  RucksackReorganization.hs
2022/Day 04: Camp Cleanup/: CampCleanup.hs  README.md
2022/Day 05: Supply Stacks/: README.md  SupplyStacks.hs
2022/Day 06: Tuning Trouble/: README.md  TuningTrouble.hs
2022/Day 07: No Space Left On Device/: NoSpaceLeftOnDevice.hs  README.md
2022/Day 08: Treetop Tree House/: README.md  TreetopTreeHouse.hs
2022/Day 09: Rope Bridge/: README.md  RopeBridge.hs
2022/Day 10: Cathode-Ray Tube/: Cathode-RayTube.hs  README.md
2022/Day 11: Monkey in the Middle/: MonkeyInTheMiddle.hs  README.md
2022/Day 12: Hill Climbing Algorithm/: HillClimbingAlgorithm.hs  README.md
2022/Day 13: Distress Signal/: DistressSignal.hs  README.md
2022/Day 14: Regolith Reservoir/: CorrectSandAtRest.txt  IncorrectSandAtRest.txt  README.md  RegolithReservoir.hs
2022/Day 15: Beacon Exclusion Zone/: BeaconExclusionZone.hs  README.md
2022/Day 16: Proboscidea Volcanium/: ProboscideaVolcanium.hs  README.md
2022/Day 17: Pyroclastic Flow/: PyroclasticFlow.hs
2022/Day 18: Boiling Boulders/: BoilingBoulders.hs  README.md
2022/Day 19: Not Enough Minerals/: NotEnoughMinerals.hs  README.md
2022/Day 20: Grove Positioning System/: GrovePositioningSystem.hs  README.md
2022/Day 21: Monkey Math/: MonkeyMath.hs  README.md
2022/Day 22: Monkey Map/: MonkeyMap.hs  README.md
2022/Day 23: Unstable Diffusion/: README.md  UnstableDiffusion.hs
2022/Day 24: Blizzard Basin/: BlizzardBasin.hs  README.md  readme.html
2022/Day 25: Full of Hot Air/: Conclusion.md  FullOfHotAir.hs  README.md
2023/: AoC.hs  AoC2023.cabal
2023/Day 01: Trebuchet?!/: README.md  Trebuchet.hs  input.txt
2023/Day 02: Cube Conundrum/: CubeConundrum.hs  README.md
2023/Day 03: Gear Ratios/: GearRatios.hs  README.md
2023/Day 04: Scratchcards/: README.md  Scratchcards.hs
2023/Day 05: If You Give A Seed A Fertilizer/: IfYouGiveASeedAFertilizer.hs  README.md
2023/Day 06: Wait For It/: README.md  WaitForIt.hs
2023/Day 07: Camel Cards/: CamelCards.hs  README.md
2023/Day 08: Haunted Wasteland/: HauntedWasteland.hs  README.md
2023/Day 09: Mirage Maintenance/: MirageMaintenance.hs  README.md
2023/Day 10: Pipe Maze/: PipeMaze.hs  README.md
2023/Day 11: Cosmic Expansion/: CosmicExpansion.hs  README.md
2023/Day 12: Hot Springs/: HotSprings.hs  README.md
2023/Day 13: Point of Incidence/: PointOfIncidence.hs  README.md
2023/Day 14: Parabolic Reflector Dish/: ParabolicReflectorDish.hs  README.md
2023/Day 15: Lens Library/: LensLibrary.hs  README.md
2024/: AoC.hs  AoC2024.cabal
2025/: AoC.hs  AoC2025.cabal
(+154 files in other folders)
