cabal-version:       2.4
name:                AoC2020
version:             2020.12.2.1
synopsis:            Advent of Code 2020
-- description:
homepage:            https://github.com/toonn/AdventOfCode
license:             BSD-2-Clause
license-file:        LICENSE
author:              toonn
maintainer:          toonn@toonn.io
category:            Game

executable ReportRepair
  main-is:            ReportRepair.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 1: Report Repair"
  data-files:         "Day 1: Report Repair"/input.txt
  default-language:   Haskell2010

executable PasswordPhilosophy
  main-is:            PasswordPhilosophy.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 2: Password Philosophy"
  data-files:         "Day 2: Password Philosophy"/input.txt
  default-language:   Haskell2010
