cabal-version:       2.4
name:                AoC2020
version:             2020.12.17.1
synopsis:            Advent of Code 2020
-- description:
homepage:            https://github.com/toonn/AdventOfCode
license:             BSD-2-Clause
license-file:        LICENSE
author:              toonn
maintainer:          toonn@toonn.io
category:            Game
data-files:          **/*.txt

executable ReportRepair
  main-is:            ReportRepair.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 1: Report Repair"
  default-language:   Haskell2010

executable PasswordPhilosophy
  main-is:            PasswordPhilosophy.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , vector ^>= 0.12.1.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 2: Password Philosophy"
  default-language:   Haskell2010

executable TobogganTrajectory
  main-is:            TobogganTrajectory.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , containers ^>= 0.6.2.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 3: Toboggan Trajectory"
  default-language:   Haskell2010

executable PassportProcessing
  main-is:            PassportProcessing.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , containers ^>= 0.6.2.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 4: Passport Processing"
  default-language:   Haskell2010

executable BinaryBoarding
  main-is:            BinaryBoarding.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 5: Binary Boarding"
  default-language:   Haskell2010

executable CustomCustoms
  main-is:            CustomCustoms.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 6: Custom Customs"
  default-language:   Haskell2010

executable HandyHaversacks
  main-is:            HandyHaversacks.hs
  build-depends:      base ^>=4.14.1.0
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 7: Handy Haversacks"
  default-language:   Haskell2010

executable HandheldHalting
  main-is:            HandheldHalting.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
                    , vector ^>= 0.12.1.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 8: Handheld Halting"
  default-language:   Haskell2010

executable EncodingError
  main-is:            EncodingError.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
                    , vector ^>= 0.12.1.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 9: Encoding Error"
  default-language:   Haskell2010

executable AdapterArray
  main-is:            AdapterArray.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
                    , vector ^>= 0.12.1.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 10: Adapter Array"
  default-language:   Haskell2010

executable SeatingSystem
  main-is:            SeatingSystem.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
                    , vector ^>= 0.12.1.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 11: Seating System"
  default-language:   Haskell2010

executable RainRisk
  main-is:            RainRisk.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
                    , vector ^>= 0.12.1.2
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 12: Rain Risk"
  default-language:   Haskell2010

executable ShuttleSearch
  main-is:            ShuttleSearch.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 13: Shuttle Search"
  default-language:   Haskell2010

executable DockingData
  main-is:            DockingData.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 14: Docking Data"
  default-language:   Haskell2010

executable RambunctiousRecitation
  main-is:            RambunctiousRecitation.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 15: Rambunctious Recitation"
  default-language:   Haskell2010

executable TicketTranslation
  main-is:            TicketTranslation.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 16: Ticket Translation"
  default-language:   Haskell2010

executable ConwayCubes
  main-is:            ConwayCubes.hs
  build-depends:      base ^>=4.14.1.0
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2020
  hs-source-dirs:     "Day 17: Conway Cubes"
  default-language:   Haskell2010

