cabal-version:       2.4
name:                AoC2021
version:             2021.12.14.2
synopsis:            Advent of Code 2021
-- description:
homepage:            https://github.com/toonn/AdventOfCode
license:             BSD-2-Clause
license-file:        LICENSE
author:              toonn
maintainer:          toonn@toonn.io
category:            Game
data-files:          **/*.txt

library
  build-depends:      base ^>= 4.14.1.0
                    , filepath ^>= 1.4.2.1
                    , megaparsec ^>= 9.0.1
                    , mtl ^>= 2.2.2
  other-modules:      Paths_AoC2021
  exposed-modules:    AoC
  hs-source-dirs:     .
  default-language:   Haskell2010

executable SonarSweep
  main-is:            SonarSweep.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 01: Sonar Sweep"
  default-language:   Haskell2010

executable Dive
  main-is:            Dive.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 02: Dive!"
  default-language:   Haskell2010

executable BinaryDiagnostic
  main-is:            BinaryDiagnostic.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 03: Binary Diagnostic"
  default-language:   Haskell2010

executable GiantSquid
  main-is:            GiantSquid.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 04: Giant Squid"
  default-language:   Haskell2010

executable HydrothermalVenture
  main-is:            HydrothermalVenture.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 05: Hydrothermal Venture"
  default-language:   Haskell2010

executable Lanternfish
  main-is:            Lanternfish.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 06: Lanternfish"
  default-language:   Haskell2010

executable TheTreacheryOfWhales
  main-is:            TheTreacheryOfWhales.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 07: The Treachery of Whales"
  default-language:   Haskell2010

executable SevenSegmentSearch
  main-is:            SevenSegmentSearch.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 08: Seven Segment Search"
  default-language:   Haskell2010

executable SmokeBasin
  main-is:            SmokeBasin.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 09: Smoke Basin"
  default-language:   Haskell2010

executable SyntaxScoring
  main-is:            SyntaxScoring.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 10: Syntax Scoring"
  default-language:   Haskell2010

executable DumboOctopus
  main-is:            DumboOctopus.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 11: Dumbo Octopus"
  default-language:   Haskell2010

executable PassagePathing
  main-is:            PassagePathing.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 12: Passage Pathing"
  default-language:   Haskell2010

executable TransparentOrigami
  main-is:            TransparentOrigami.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 13: Transparent Origami"
  default-language:   Haskell2010

executable ExtendedPolymerization
  main-is:            ExtendedPolymerization.hs
  build-depends:      base ^>= 4.14.1.0
                    , AoC2021
                    , containers ^>= 0.6.2.1
                    , criterion ^>= 1.5.9.0
                    , megaparsec ^>= 9.0.1
                    , silently ^>= 1.2.5.1
  other-modules:      Paths_AoC2021
  hs-source-dirs:     "Day 14: Extended Polymerization"
  default-language:   Haskell2010
