cabal-version:       2.4
name:                AoC2022
version:             2022.12.8.1
synopsis:            Advent of Code 2022
-- description:
homepage:            https://github.com/toonn/AdventOfCode
license:             BSD-2-Clause
license-file:        LICENSE
author:              toonn
maintainer:          toonn@toonn.io
category:            Game
data-files:          **/*.txt

library
  build-depends:      base ^>= 4.16.4.0
                    , filepath ^>= 1.4.100.0
                    , megaparsec ^>= 9.3.0
                    , mtl ^>= 2.3.1
  other-modules:      Paths_AoC2022
  exposed-modules:    AoC
  hs-source-dirs:     .
  default-language:   Haskell2010

executable CalorieCounting
  main-is:            CalorieCounting.hs
  build-depends:      base ^>= 4.16.4.0
                    , AoC2022
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2022
  hs-source-dirs:     "Day 01: Calorie Counting"
  default-language:   Haskell2010

executable RockPaperScissors
  main-is:            RockPaperScissors.hs
  build-depends:      base ^>= 4.16.4.0
                    , AoC2022
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2022
  hs-source-dirs:     "Day 02: Rock Paper Scissors"
  default-language:   Haskell2010

executable RucksackReorganization
  main-is:            RucksackReorganization.hs
  build-depends:      base ^>= 4.16.4.0
                    , AoC2022
                    , containers ^>= 0.6.5.1
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2022
  hs-source-dirs:     "Day 03: Rucksack Reorganization"
  default-language:   Haskell2010

executable CampCleanup
  main-is:            CampCleanup.hs
  build-depends:      base ^>= 4.16.4.0
                    , AoC2022
                    , containers ^>= 0.6.5.1
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2022
  hs-source-dirs:     "Day 04: Camp Cleanup"
  default-language:   Haskell2010

executable SupplyStacks
  main-is:            SupplyStacks.hs
  build-depends:      base ^>= 4.16.4.0
                    , AoC2022
                    , containers ^>= 0.6.5.1
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2022
  hs-source-dirs:     "Day 05: Supply Stacks"
  default-language:   Haskell2010

executable TuningTrouble
  main-is:            TuningTrouble.hs
  build-depends:      base ^>= 4.16.4.0
                    , AoC2022
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2022
  hs-source-dirs:     "Day 06: Tuning Trouble"
  default-language:   Haskell2010

executable NoSpaceLeftOnDevice
  main-is:            NoSpaceLeftOnDevice.hs
  build-depends:      base ^>= 4.16.4.0
                    , AoC2022
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2022
  hs-source-dirs:     "Day 07: No Space Left On Device"
  default-language:   Haskell2010

executable TreetopTreeHouse
  main-is:            TreetopTreeHouse.hs
  build-depends:      base ^>= 4.16.4.0
                    , AoC2022
                    , containers ^>= 0.6.5.1
                    , criterion ^>= 1.6.0.0
                    , megaparsec ^>= 9.3.0
                    , silently ^>= 1.2.5.3
  other-modules:      Paths_AoC2022
  hs-source-dirs:     "Day 08: Treetop Tree House"
  default-language:   Haskell2010
